# spend-control-ai-service

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: docker-publish.yml
alembic/: env.py
alembic/versions/: 20260524_0001_init.py
app/: main.py
app/api/: routes.py
app/clients/: ollama_client.py
app/core/: config.py
app/models/: __init__.py
app/prompts/: anomaly_explanation.txt  chat_assistant.txt  claim_explanation.txt  weekly_summary.txt
app/schemas/: ai.py
app/services/: ai_workflows.py
tests/: conftest.py  test_fallbacks.py  test_health.py
